# DearImKit

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: error_popups.cpp  hello_world.cpp  multiple_windows.cpp
include/DearImKit/: dearimkit.h
include/DearImKit/base/: panel.h
include/DearImKit/init/: init.h
include/DearImKit/panel_manager/: panel_manager.h
include/DearImKit/panelmanager/: panelmanager.h
lib/: glad.c
lib/include/glad/: glad.h
src/base/: panel.cpp
src/init/: init.cpp
src/panel_manager/: panel_manager.cpp
src/panelmanager/: panelmanager.cpp
